-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
None
-
5.9.1
ODF tables could contain cell borders, but borders set through QTextTableFormat::setBorder does not apply to it. Most likely it is just not supported as they can only be set for the table itself in Qt, but ODF takes them for individual cells which Qt does not support. However, maybe it could still propagate from the table format to the cell styles. Not as flexible as ODF cell borders can be, but at least there would be something.
Attached example should reproduce this.
- duplicates
-
QTBUG-7056 QTextDocumentWriter ODF support does not include Table Borders.
-
- Closed
-
-
QTBUG-9415 Not correctly displayed when saving a table in HTML and ODF
-
- Closed
-
| For Gerrit Dashboard: QTBUG-63581 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 207540,21 | Add more formatting to QTextDocumentWriter when writing ODF files | dev | qt/qtbase | Status: MERGED | +2 | 0 |